# rust-caldav-syncer

./: .gitignore  AGENTS.md  Cargo.toml  README.md  test_config.yaml
.roo/rules-architect/: AGENTS.md
.roo/rules-ask/: AGENTS.md
.roo/rules-code/: AGENTS.md
.roo/rules-debug/: AGENTS.md
dummy_webdav/: docker-compose.yaml
src/: config.rs  hash_store.rs  hash_store_guard.rs  lib.rs  main.rs  sync.rs  webdav_client.rs
test_data/: test_file1.txt
test_data/subdir/: test_file1.txt
tests/: dummy_server.rs  remote_hashes_test.rs  sync_integration.rs
