[package]
name = "phone_sync"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_yaml = "0.9"
reqwest = { version = "0.11", features = ["json"] }
sha2 = "0.10"
walkdir = "2.3"
clap = { version = "4.0", features = ["derive"] }
log = "0.4"
env_logger = "0.10"
base64 = "0.21"

[dev-dependencies]
tempfile = "3.0"
serial_test = "2.0"
ctor = "0.1"